--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 server.port=8084
 spring.application.name=admin-service
+management.endpoints.web.exposure.include= hystrix.stream, info, health
+#management.endpoints.web.exposure.include=hystrix.stream
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=1234
 #spring.datasource.url=jdbc:postgresql://localhost/test
-#
-#spring.jpa.show-sql=true
-#
-#spring.jpa.hibernate.ddl-auto=update
-#
+
+#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:8889/spring3
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
