--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 server.port=8081
 spring.application.name=product-service
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.url=jdbc:postgresql://localhost/spring3
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+#spring.datasource.url=jdbc:postgresql://localhost/spring3
+
+#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:8889/spring3
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
