--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
 spring.application.name=product-service
+management.endpoints.web.exposure.include= hystrix.stream, info, health
 
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
