--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -117,7 +122,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.4.RELEASE</version>
             </plugin>
+
         </plugins>
     </build>
 
