--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,15 +2,17 @@ server.port=8081
 spring.application.name=product-service
 management.endpoints.web.exposure.include= hystrix.stream, info, health
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.mysql.Driver
 #spring.datasource.username=postgres
 #spring.datasource.password=1234
 #spring.datasource.url=jdbc:postgresql://localhost/spring3
 
 #spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:8889/spring3
+spring.datasource.url=jdbc:mysql://database:3306/spring3
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 spring.jpa.show-sql=true
 
